Bug 1391458 - Make sure WrBridge is ready in the head of BeginTransaction. r=kats